@@ -1,3 +1,6 @@
+[CW16]
+* SyncProxyAndroid SDK: prevent crashing of the application when trying to send a request with large bulk data.
+
 [CW15]
 * Fix (protocol v1): don't send initialization requests when switching to already registered app from another screen (on HMI).
 * Fix an incorrect app name when the phone is using Russian locale.
